--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ dependencies {
 
 
     implementation 'com.google.code.gson:gson:2.8.6'                       //retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.8.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
@@ -56,8 +56,8 @@ dependencies {
 
     implementation 'com.github.chivorns.androidx:smartmaterialspinner:1.2.1' // Searchable Spinner
 
-    implementation "com.karumi:dexter:5.0.0"                            //image picker
-    implementation 'com.github.yalantis:ucrop:2.2.2'
+//    implementation 'com.karumi:dexter:6.2.3'                           //image picker
+    implementation 'com.github.yalantis:ucrop:2.2.7'
 
     implementation 'com.github.smarteist:autoimageslider:1.4.0' // image slider
     implementation 'com.github.aagitoEx:imageradiobutton:1.0'
@@ -65,5 +65,12 @@ dependencies {
 
     //qr scan by zxing
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+
+//    implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+    implementation "androidx.activity:activity-ktx:1.3.0"
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+
 
 }
