--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
     //qr scan by zxing
     implementation 'me.dm7.barcodescanner:zxing:1.9.13'
 
+    implementation 'com.google.zxing:core:3.2.1'
+
 //    implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation "androidx.activity:activity-ktx:1.3.0"
